; ModuleID = '/home/carl/AnghaBench/reactos/base/services/rpcss/extr_epmp.c_delete_registered_ept_entry.c'
source_filename = "/home/carl/AnghaBench/reactos/base/services/rpcss/extr_epmp.c_delete_registered_ept_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.registered_ept_entry = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.registered_ept_entry*)* @delete_registered_ept_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @delete_registered_ept_entry(%struct.registered_ept_entry* %0) #0 {
  %2 = alloca %struct.registered_ept_entry*, align 8
  store %struct.registered_ept_entry* %0, %struct.registered_ept_entry** %2, align 8
  %3 = load %struct.registered_ept_entry*, %struct.registered_ept_entry** %2, align 8
  %4 = getelementptr inbounds %struct.registered_ept_entry, %struct.registered_ept_entry* %3, i32 0, i32 3
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @I_RpcFree(i32 %5)
  %7 = load %struct.registered_ept_entry*, %struct.registered_ept_entry** %2, align 8
  %8 = getelementptr inbounds %struct.registered_ept_entry, %struct.registered_ept_entry* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @I_RpcFree(i32 %9)
  %11 = load %struct.registered_ept_entry*, %struct.registered_ept_entry** %2, align 8
  %12 = getelementptr inbounds %struct.registered_ept_entry, %struct.registered_ept_entry* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @I_RpcFree(i32 %13)
  %15 = load %struct.registered_ept_entry*, %struct.registered_ept_entry** %2, align 8
  %16 = getelementptr inbounds %struct.registered_ept_entry, %struct.registered_ept_entry* %15, i32 0, i32 0
  %17 = call i32 @list_remove(i32* %16)
  %18 = call i32 (...) @GetProcessHeap()
  %19 = load %struct.registered_ept_entry*, %struct.registered_ept_entry** %2, align 8
  %20 = call i32 @HeapFree(i32 %18, i32 0, %struct.registered_ept_entry* %19)
  ret void
}

declare dso_local i32 @I_RpcFree(i32) #1

declare dso_local i32 @list_remove(i32*) #1

declare dso_local i32 @HeapFree(i32, i32, %struct.registered_ept_entry*) #1

declare dso_local i32 @GetProcessHeap(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
